Add build-phase validation for search filter attribute names
Task: 11339